k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: go-app-route
  namespace: routing-experiment
spec:
  parentRefs:
  - name: go-app-gateway
  hostnames:
  - "localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: go-app
      port: 80
  - matches:
    - path:
        type: Exact
        value: /healthz
    backendRefs:
    - name: go-app
      port: 80
  - matches:
    - path:
        type: Exact
        value: /version
    backendRefs:
    - name: go-app
      port: 80
